Edit layout and styles

--- a/index.html
+++ b/index.html
@@ -9,8 +9,22 @@
 </head>
 <body>
 
-    <div class="grid">
-        
+    <div class="header">
+        <h1>Super Simple Sketchpad</h1>
+        <div class="res-input">
+            <p>Resolution (1-100):</p>
+            <input id="resolution">
+        </div>
+        <button class="reset">Reset</button>
+    </div>
+
+    <div class="content">
+        <h2>Draw Something!</h2>
+        <div class="grid"></div>
+    </div>
+
+    <div class="footer">
+        <p>Copyright kgpolte 2023</p>
     </div>
 
     <script src="./odin-sketch.js"></script>
