--- a/index.html
+++ b/index.html
@@ -11,11 +11,10 @@
 
     <div class="header">
         <h1>Super Simple Sketchpad</h1>
-        <div class="res-input">
-            <p>Resolution (1-100):</p>
-            <input id="resolution">
+        <div class="right">
+            <button id="resolution">Change Resolution</button>
+            <button id="reset">Reset</button>
         </div>
-        <button class="reset">Reset</button>
     </div>
 
     <div class="content">
