--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odin Sketch</title>
+    <title>Pixel Sketcher</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
 
     <div class="header">
-        <h1>Super Simple Sketchpad</h1>
+        <h1>Pixel Sketcher</h1>
         <div class="right">
             <button id="resolution">Change Resolution</button>
             <button id="reset">Reset</button>
