Add opacity feature
Rewrite cell mouseover event listener to darken the cell by a
certain amount on each pass. Improve page styles.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
 
     <div class="content">
-        <h2>Draw Something!</h2>
+        <h2>Drag your mouse to draw something!</h2>
         <div class="grid"></div>
     </div>
 
